build-logs-failed/build-fclabels-2.0.5.1.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - fclabels-2.0.5.1 (lib) (first run)
 - fclabels-2.0.5.1 (test:suite) (first run)
Configuring library for fclabels-2.0.5.1...
Preprocessing library for fclabels-2.0.5.1...
Building library for fclabels-2.0.5.1...
[ 1 of 10] Compiling Data.Label.Point
[ 2 of 10] Compiling Data.Label.Poly
[ 3 of 10] Compiling Data.Label.Partial
[ 4 of 10] Compiling Data.Label.Mono
[ 5 of 10] Compiling Data.Label.Failing
[ 6 of 10] Compiling Data.Label.Derive

src/Data/Label/Derive.hs:140:32: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a lambda abstraction:
        Patterns of type ‘Label’ not matched: LabelDecl _ _ _ _ _ _
    |
140 |      let bodies  =        map (\(LabelExpr _ _ _ b) -> b) labels
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^

src/Data/Label/Derive.hs:141:32: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a lambda abstraction:
        Patterns of type ‘Label’ not matched: LabelDecl _ _ _ _ _ _
    |
141 |          types   =        map (\(LabelExpr _ _ t _) -> t) labels
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^

src/Data/Label/Derive.hs:142:32: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a lambda abstraction:
        Patterns of type ‘Label’ not matched: LabelDecl _ _ _ _ _ _
    |
142 |          context = head $ map (\(LabelExpr _ c _ _) -> c) labels
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^

src/Data/Label/Derive.hs:143:32: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a lambda abstraction:
        Patterns of type ‘Label’ not matched: LabelDecl _ _ _ _ _ _
    |
143 |          vars    = head $ map (\(LabelExpr v _ _ _) -> v) labels
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^
[ 7 of 10] Compiling Data.Label
[ 8 of 10] Compiling Data.Label.Base
[ 9 of 10] Compiling Data.Label.Total
[10 of 10] Compiling Data.Label.Monadic
Configuring test suite 'suite' for fclabels-2.0.5.1...
Preprocessing test suite 'suite' for fclabels-2.0.5.1...
Building test suite 'suite' for fclabels-2.0.5.1...
[1 of 1] Compiling Main

test/TestSuite.hs:26:1: error:
    Could not find module ‘Control.Monad.Trans.Error’
    Perhaps you meant
      Control.Monad.Trans.Free (needs flag -package-id free-5.2)
      Control.Monad.Trans.Iter (needs flag -package-id free-5.2)
      Control.Monad.Trans.Writer (needs flag -package-id rerebase-1.20.2)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
26 | import Control.Monad.Trans.Error (Error (noMsg))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:suite from fclabels-2.0.5.1.

